<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/votingListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vote_main_title"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/currentSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vote_current_selection_title"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/candidates_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/voteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vote_button_confirm_vote"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>